title overflow fix

--- a/public/css/dietlah.2.css
+++ b/public/css/dietlah.2.css
@@ -787,7 +787,7 @@ div.other-message{
     opacity: 1;
 }
 
-p {
+p, h5 {
     word-wrap: break-word;
 }
 
